--- a/env_generator/app/src/components/menu/menu.module.css
+++ b/env_generator/app/src/components/menu/menu.module.css
@@ -13,7 +13,7 @@
   }
   
   .menu h2 {
-    color: white; 
+    text-align: center; 
     margin-bottom: 20px; 
   }
   
@@ -23,4 +23,12 @@
     border: none;
     padding: 10px;
     text-align: center; 
+  }
+
+  .light {
+    color: #00000098;
+  }
+    
+  .dark {
+    color: white;
   }
